--- a/RoboTech/Views/Checkout/Index.cshtml
+++ b/RoboTech/Views/Checkout/Index.cshtml
@@ -118,7 +118,7 @@
                     <div class="container p-3">
                         <div class="col-lg-12">
                             <h6 class="mb-4 mt-3">
-                                <a href="/Product" class="text-body">
+                                <a href="/ProductList" class="text-body">
                                     <i class="fas fa-long-arrow-alt-left me-4"></i>
                                     Continue shopping
                                 </a>
