--- a/RoboTech/Views/Product/Details.cshtml
+++ b/RoboTech/Views/Product/Details.cshtml
@@ -11,7 +11,7 @@
 <div id="product-details">
     <div class="container">
         <div class="mt-4" style="margin-bottom: 60px">
-        <a href="/Product" class="text-body">
+        <a href="/ProductList" class="text-body">
             <i class="fas fa-long-arrow-alt-left me-4"></i>Return to shop
         </a>
         </div>
