--- a/RoboTech/Views/Product/Details.cshtml
+++ b/RoboTech/Views/Product/Details.cshtml
@@ -70,7 +70,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, perferendis eius. Dignissimos, labore suscipit. Unde.</p>
                         <ul>
                             <li>Available: <span>in stock</span></li>
-                            <li>Category: <span>Pc</span></li>
+                            <li>Category: <span><a href="danhmuc/@Model.Cate.Alias">@Model.Cate.Name</a></span></li>
                             <li>Warranty: <span>1 year</span></li>
                             <li>Shipping Area: <span>All over the world</span></li>
                             <li>Shipping Fee: <span>Free</span></li>
