update order, details, done order

--- a/RoboTech/Views/Accounts/Dashboard.cshtml
+++ b/RoboTech/Views/Accounts/Dashboard.cshtml
@@ -59,7 +59,7 @@
                                                 <tr>
                                                     <td><a class="account-order-id" href="javascript:void(0)">#@item.Id</a></td>
                                                     <td>@item.OrderDate</td>
-                                                    <td>@item.DeliveryDate</td>
+                                                    <td>@item.OrderDate</td>
                                                   @*  <td>@item.TransactStatus.Status</td>*@
                                                     <td>
                                                         <a href="javascript:void(0)" class="xemdonhang" data-madonhang="@item.Id">Xem đơn hàng</a>
