--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -14,14 +14,14 @@
                     <span class="text-white"> Product Category</span>
                 </div>
                 <ul class="nav-item">
-                    <li>
-                        @*<button class="btn" type="button" onclick="location.href='@Url.Action("Index", "Product")'">*@
-                         <button class="btn" type="button" href="/shop.html">
-                            <i class="fa-solid fa-laptop"></i>
-                            Laptop
-                        </button>
+                    <li >
+                        <form action="danhmuc/laptop" method="get">
+                            <button class="btn" type="button">
+                                <i class="fa-solid fa-laptop"></i>Laptop
+                            </button>
+                        </form>
                         <ul class="subnav">
-                            <li>
+                            <li >
                                 <a class="head-nav" href="#">
                                     <h4 style="margin-top: 15px ">
                                         GAMING
