--- a/RoboTech/Views/Shared/Components/HeaderCart/Default.cshtml
+++ b/RoboTech/Views/Shared/Components/HeaderCart/Default.cshtml
@@ -25,8 +25,9 @@
             </ul>
         </div>
         <div class="minicart-item_total">
-            <span>Tổng tiền</span>
-            <span class="ammount">@Model.Sum(x => x.TotalMoney).ToString("#,##0") VNĐ</span>
+            
+            <span><strong>Tổng tiền</strong></span>
+            <span class="ammount"><strong>@Model.Sum(x => x.TotalMoney).ToString("#,##0") VNĐ</strong></span>
         </div>
         <div class="group-btn_wrap d-grid gap-2">
             <a href="cart.html" class="btn btn-secondary btn-primary-hover">Xem giỏ hàng</a>
