--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                 <div class="footer-col">
                     <h4>online shop</h4>
                     <ul>
-                        <li><a href="#">Laptop</a></li>
+                        <li><a href="/danhmuc/laptop">Laptop</a></li>
                         <li><a href="#">PC</a></li>
                         <li><a href="#">Screen</a></li>
                         <li><a href="#">Keyboard</a></li>
