--- a/RoboTech/Views/Product/List.cshtml
+++ b/RoboTech/Views/Product/List.cshtml
@@ -65,7 +65,7 @@
                                          class="card-img-top " alt="Laptop" />
                                             <div class="card-body">
                                                 <div class="d-flex justify-content-between">
-                                                    <p class="small"><a href="#" class="text-muted">@item.Cate</a></p>
+                                                    <p class="small">@item.Cate</p>
                                                 </div>
                                                 <div class="d-flex justify-content-between mb-3">
                                                     <h5 class="mb-0">@item.Name</h5>
