--- a/RoboTech/wwwroot/css/site.css
+++ b/RoboTech/wwwroot/css/site.css
@@ -2024,3 +2024,45 @@ main .account-page {
         content: '\f077';
         font-family: 'FontAwesome';
     }
+
+/*----------------------------------------*/
+/*  06. Checkout Order Page
+/*----------------------------------------*/
+.breadcrumb-height {
+    height: 370px
+}
+
+.breadcrumb-heading {
+    font-size: 36px
+}   
+.breadcrumb-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    height: 100%
+}
+
+    .breadcrumb-item ul li {
+        display: inline-block;
+        line-height: 30px;
+        font-size: 14px
+    }
+
+        .breadcrumb-item ul li i {
+            font-size: 16px;
+            vertical-align: middle
+        }
