--- a/RoboTech/Areas/Admin/Views/AdminAccounts/Index.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminAccounts/Index.cshtml
@@ -83,12 +83,12 @@
                                             <div class="badge badge-success badge-dot m-r-10"></div>
                                             <div>Active</div>
                                         </div>
-                                    }
+                                    }   
                                     else
                                     {
                                         <div class="d-flex align-items-center">
                                             <div class="badge badge-success badge-dot m-r-10"></div>
-                                            <div>Blog</div>
+                                            <div>Block</div>
                                         </div>
                                     }
                                 </td>
