edit timeout session

--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿
-@*Navi section*@
 
 
 <div>
-    <div class="left-zone ads" style="">
-        <img src="~/assets/img/banner-left.png" class="" height="350px" />
+    <div class="left-zone ads"  >
+        <img src="~/assets/img/banner-left.png" asp-append-version="true" height="350px" />
     </div>
+    
     <div id="category" class="container mb-5">
         <div class="row">
             <div class="col-lg-3 flex-grow-1">
