--- a/RoboTech/Views/Product/List.cshtml
+++ b/RoboTech/Views/Product/List.cshtml
@@ -61,7 +61,8 @@
                                 <div class="col-md-6 col-lg-4 mb-4">
                                     <a href="@url">
                                         <div class="card">
-                                            <img src="~/images/products/@item.Thumb"
+                                            <img width="400"
+                                         height="200" src="~/images/products/@item.Thumb"
                                          class="card-img-top " alt="Laptop" />
                                             <div class="card-body">
                                                 <div class="d-flex justify-content-between">
