--- a/RoboTech/Views/Checkout/Success.cshtml
+++ b/RoboTech/Views/Checkout/Success.cshtml
@@ -45,12 +45,11 @@
     <div class="checkout-area section-space-y-axis-100">
         <div class="container">
             <form>
-                
                 <div class="row">
-                    <div class="col-lg-6 col-12">
+                    <div style="text-align:center;">
 
                         <div class="checkbox-form">
-                            <h3>Đặt hàng thành công</h3>
+                            <h3 style="color:red">ĐẶT HÀNG THÀNH CÔNG</h3>
                             <p>Mã đơn hàng: #@Model.DonHangID</p>
                             <p>Cảm ơn bạn đã đặt hàng</p>
                             <br />
@@ -60,7 +59,7 @@
                             <p>Số điện thoại: @Model.Phone</p>
                             <p>Địa chỉ: @Model.Address</p>
                             <br />
-                            Để xem chi tiết đơn hàng vui lòng truy cập vào <a asp-controller="Accounts" asp-action="Dashboard"><strong>Tài khoản cá nhân.</strong></a> Cần hỗ trợ? Liên hệ với chúng tôi qua số điện thoại 0963102916
+                            Để xem chi tiết đơn hàng vui lòng truy cập vào <a asp-controller="Accounts" asp-action="Dashboard"><strong>Tài khoản cá nhân.</strong></a> Cần hỗ trợ? Liên hệ với chúng tôi qua số điện thoại 0392697777
                         </div>
                     </div>
                     <div class="col-lg-6 col-12">
