--- a/RoboTech/Views/ShoppingCart/Index.cshtml
+++ b/RoboTech/Views/ShoppingCart/Index.cshtml
@@ -46,7 +46,8 @@
                                                     </td>
                                                     <td class="product-thumbnail">
                                                         <a href="javascript:void(0)">
-                                                            <img src="~/images/products/@item.product.Thumb" alt="@item.product.Name">
+                                                            <img width="400"
+                                                     height="200" src="~/images/products/@item.product.Thumb" alt="@item.product.Name">
                                                         </a>
                                                     </td>
                                                     <td class="product-name"><a href="javascript:void(0)">@item.product.Name</a></td>
@@ -64,7 +65,7 @@
                                 </table>
                             </div>
                             <div class="row">
-                                <div class="col-md-5 ml-auto">
+                                <div style="text-align:center;" class="">
                                     <div class="cart-page-total">
                                         <h2>Tổng đơn hàng</h2>
                                         <ul>
@@ -84,10 +85,11 @@
                         </form>
                     }
                     else
-                    {
-                        <p>Chưa có hàng hóa trong giỏ hàng.Bạn hãy tích cực mua sắm đi nào</p>
+                    { 
+                    <div style="text-align:center;">
+                        <p>You don't have any items in your cart. <a href="/ProductList"><strong>SHOPPING NOW !</strong></a></p>
+                    </div>
                     }
-
                 </div>
             </div>
         </div>
